<resources>
    <string name="app_name">TicTacToe</string>
    <string name="str_player1">Player 1</string>
    <string name="str_player2">Player 2</string>
    <string name="str_start_new_game">Start New Game</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_start">Start</string>
    <string name="str_game_result">Result</string>
    <string name="str_new_game">New Game</string>
    <string name="str_exit">Exit</string>
    <string name="str_winner_is">won</string>
    <string name="str_space">\u0020</string>
    <string name="str_players_detail">Players Detail</string>
    <string name="str_player_1_name">Player 1 : Name</string>
    <string name="str_player_2_name">Player 2 : Name</string>
    <string name="str_play_3_x_3">Play 3 x 3</string>
    <string name="str_play_4_x_4">Play 4 x 4</string>
    <string name="str_play_5_x_5">Play 5 x 5</string>
    <string name="str_recent_results">Recent Results</string>
    <string name="str_v_s">v/s</string>
    <string name="str_mode">Mode</string>
    <string name="str_players">Players</string>
    <string name="str_winner">Winner</string>
    <string name="str_date">Date</string>
    <string name="str_load_all">Load All</string>
    <string name="str_draw">Draw</string>
</resources>
